Fixed issue with Portfolio Section on mobile devices

--- a/portfolio/assets/css/portfolio.css
+++ b/portfolio/assets/css/portfolio.css
@@ -9,7 +9,7 @@ a, a:hover, a:focus, a:active, a.active {
 }
 
 .container {
-	width: 900px;
+	width: 100%;
 }
 
 #portfolio .portfolio-item {
